--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 	</head>
 	<body>
 		<nav class="nav-default">
-			<button>Dropdown</button>
-			<ul class="dropdown-menu">
-				<li class="dropdown-item"><a href="#" class="dropdown-link">Link</a></li>
-				<li class="dropdown-item"><a href="#" class="dropdown-link">Link</a></li>
-				<li class="dropdown-item"><a href="#" class="dropdown-link">Link</a></li>
-				<li class="dropdown-item"><a href="#" class="dropdown-link">Link</a></li>
-			</ul>
+			<div class="dropdown">
+				<button>Dropdown</button>
+				<ul class="dropdown-menu">
+					<li class="dropdown-item"><a href="#" class="dropdown-link">Link</a></li>
+					<li class="dropdown-item"><a href="#" class="dropdown-link">Link</a></li>
+					<li class="dropdown-item"><a href="#" class="dropdown-link">Link</a></li>
+					<li class="dropdown-item"><a href="#" class="dropdown-link">Link</a></li>
+				</ul>
+			</div>
 		</nav>
 	</body>
 </html>
